DBZ-6356 Support streaming a list of shards and accompanying GTIDs